--- a/_posts/2018-08-12-own-boss.md
+++ b/_posts/2018-08-12-own-boss.md
@@ -4,6 +4,7 @@ title:  On being your own boss
 date: 2018-08-12
 description: Thoughts on taking responsiblity for yourself
 tags: life
+toc: 
 ---
 So you want to be your own boss?
 
